fixed spacing, and improved user experience

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -16,3 +16,8 @@
 .hide-form {
   display: none;
 }
+
+.surrender-form {
+  width: 50%;
+  margin: auto;
+}
